--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -62,6 +62,7 @@ test-suite mini-java-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ParserSpec
       Paths_mini_java
   autogen-modules:
       Paths_mini_java
@@ -69,6 +70,11 @@ test-suite mini-java-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      HUnit
+    , aeson
+    , base >=4.7 && <5
+    , bytestring
+    , hspec
+    , hspec-discover
     , mini-java
   default-language: Haskell2010
