Semantic Tests added + new notes

--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -63,6 +63,8 @@ test-suite mini-java-test
   main-is: Spec.hs
   other-modules:
       ParserSpec
+      SemanticsSpec
+      TestHelper
       Paths_mini_java
   autogen-modules:
       Paths_mini_java
