--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -53,6 +53,9 @@ executable mini-java-exe
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-tools:
+      alex
+    , happy
   build-depends:
       base >=4.7 && <5
     , mini-java
