Signaturen geändert: Fieldref->Field

--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -27,7 +27,7 @@ library
   exposed-modules:
       ClassFileGen
       ClassFormat
-      CodeGen
+      ConstPoolGen
       Lexer
       Lib
       Parser
