Added prettyprint for class file. Added tests for CP.
FieldRefs and Fieldmethods are currently broken.

--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -68,6 +68,7 @@ test-suite mini-java-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      CPSpec
       ParserSpec
       SemanticsSpec
       TestHelper
