--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       ClassFileGen
       ClassFormat
+      CodeGenerator
       ConstPoolGen
       Lexer
       Lib
