--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       ByteCodeInstr
+      ClassFileGen
       ClassFormat
       CodeGenerator
       ConstPoolGen
