--- a/mini-java/mini-java.cabal
+++ b/mini-java/mini-java.cabal
@@ -45,7 +45,8 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      array
+      ansi-terminal >=1.0 && <2
+    , array
     , base >=4.7 && <5
     , binary
     , bytestring
@@ -65,7 +66,8 @@ executable mini-java-exe
       alex
     , happy
   build-depends:
-      base >=4.7 && <5
+      ansi-terminal >=1.0 && <2
+    , base >=4.7 && <5
     , binary
     , bytestring
     , directory
@@ -89,6 +91,7 @@ test-suite mini-java-test
   build-depends:
       HUnit
     , aeson
+    , ansi-terminal >=1.0 && <2
     , base >=4.7 && <5
     , binary
     , bytestring
