--- a/mini-java/stack.yaml
+++ b/mini-java/stack.yaml
@@ -11,6 +11,9 @@
 # resolver: lts-3.5
 # resolver: nightly-2015-09-21
 resolver: ghc-9.4.8
+extra-deps:
+  - Cabal-2.2.0.1
+  - text-1.2.5.0
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
