--- a/mini-java/package.yaml
+++ b/mini-java/package.yaml
@@ -34,6 +34,7 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -Wunused-top-binds
 
 library:
   source-dirs: src
